--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "body-parser": "^1.19.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
     "i": "^0.3.6",
+    "mongoose": "^5.8.1",
     "npm": "^6.13.1",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0",
